--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="glass card">
         <h1 class="title tears-emoji">😭</h1>
         <h2 class="title small">Close your eyes...</h2>
-        <p class="subtitle">Don't ruin the fun it's all about you. 💕</p>
+        <p class="subtitle">Don't ruin the fun it's about you. 💕</p>
         <button class="btn" id="btnCloseEyes">Okay…</button>
       </div>
     </section>
@@ -101,18 +101,16 @@
         <div class="badge">💖</div>
         <div class="final-content">
           <div class="final-text">
-            <h2 class="title">Happy Valentine's Day <span id="displayName"></span> 💖</h2>
-            <p class="subtitle">Happy Valentine’s Day ODUNAYOMI ❤️
-            <br><br>
-Sometimes I sit and think about how we started as childhood friends just laughing over random things, and now you’ve become someone who feels so special and close to me — like my best friend and my babe at the same time 😄. Life really did something beautiful with our story.
-            <br><br>
-You know me in ways most people don’t, and I love how being around you feels easy and real.(even if it's not physical) We’ve grown up together, seen different versions of each other, and somehow our connection just keeps getting stronger. You make me laugh when I don’t even feel like smiling, and you bring a kind of peace that’s hard to explain.
-            <br><br>
-I appreciate the little things you do — the way you care, the way you listen, and the way you always bring your own unique energy. You make ordinary moments feel special, and honestly, that’s rare. I’m grateful for every memory we’ve created and excited for the ones still waiting for us.
-            <br><br>
-Today, I just want you to know you’re deeply appreciated and valued. Whether we’re joking around, talking seriously, or just existing in the same space, you mean a lot to me. Keep being your amazing self, keep shining, and don’t forget that you’ll always have someone here who genuinely cares about you.
-            <br><br>
-Enjoy your Valentine’s Day 🌹✨.</p>
+              <h2 class="title">Happy Valentine's Day <span id="displayName"></span> ❤️</h2>
+              <p class="subtitle">Sometimes I sit and think about how we started as childhood friends just laughing over random things, and now you've become someone who feels so special and close to me — like my best friend and my babe at the same time 😄. Life really did something beautiful with our story.
+              <br><br>
+You know me in ways most people don't, and I love how being around you feels easy and real. We've grown up together, seen different versions of each other, and somehow our connection just keeps getting stronger. You make me laugh when I don't even feel like smiling, and you bring a kind of peace that's hard to explain.
+              <br><br>
+I appreciate the little things you do — the way you care, the way you listen, and the way you always bring your own unique energy. You make ordinary moments feel special, and honestly, that's rare. I'm grateful for every memory we've created and excited for the ones still waiting for us.
+              <br><br>
+Today, I just want you to know you're deeply appreciated and valued. Whether we're joking around, talking seriously, or just existing in the same space, you mean a lot to me. Keep being your amazing self, keep shining, and don't forget that you'll always have someone here who genuinely cares about you.
+              <br><br>
+Enjoy your Valentine's Day 🌹✨.</p>
           </div>
           <div class="final-image">
             <img id="valentineImage" src="images/valentine.jpg.jpeg" alt="Valentine's surprise" />
