--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <h2 class="title">Happy Valentine's Day <span id="displayName"></span> ❤️</h2>
               <p class="subtitle">Sometimes I sit and think about how we started as childhood friends just laughing over random things, and now you've become someone who feels so special and close to me — like my best friend and my babe at the same time 😄. Life really did something beautiful with our story.
               <br><br>
-You know me in ways most people don't, and I love how being around you feels easy and real. We've grown up together, seen different versions of each other, and somehow our connection just keeps getting stronger. You make me laugh when I don't even feel like smiling, and you bring a kind of peace that's hard to explain.
+You know me in ways most people don't, and I love how being around you feels easy and real(even when it's not physical). We've grown up together, seen different versions of each other, and somehow our connection just keeps getting stronger. You make me laugh when I don't even feel like smiling, and you bring a kind of peace that's hard to explain.
               <br><br>
 I appreciate the little things you do — the way you care, the way you listen, and the way you always bring your own unique energy. You make ordinary moments feel special, and honestly, that's rare. I'm grateful for every memory we've created and excited for the ones still waiting for us.
               <br><br>
